# integer-fullscreen

./: Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
bindings/: Cargo.toml  build.rs
src/: main.rs
