[package]
name = "integer-fullscreen"
version = "0.1.0"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
itertools = "0.10"
log = "0.4"
winapi = { version = "0.3", features = ["processthreadsapi", "errhandlingapi", "tlhelp32", "handleapi", "memoryapi", "psapi", "securitybaseapi", "winbase", "winerror", "std", "winuser", "wincon"] }
windows = "0.8"
bindings = { path = "bindings" }
