[package]
name = "integer-fullscreen"
version = "0.1.2"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
itertools = "0.10"
log = "0.4"
windows = "0.9"
bindings = { path = "bindings" }
once_cell = "1"
